force-app/main/default/objects/Social_Useful_Work__c/Social_Useful_Work__c.object-meta.xml
<CustomObject>
    <description>Используется для учета отработки студентами общественно полезного труда</description>
    <label>Общественно полезная работа</label>
    <nameField>
        <label>Имя записи</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Общественно полезные работы</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>