force-app/main/default/objects/Social_Useful_Work__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Количество часов</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>