force-app/main/default/objects/Social_Useful_Work__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Студент</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Общественно полезные работы</relationshipLabel>
    <relationshipName>Social_Useful_Works</relationshipName>
    <type>Lookup</type>
</CustomField>