force-app/main/default/objects/Social_Useful_Work__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <label>Дата отработки</label>
    <type>Date</type>
</CustomField>