force-app/main/default/objects/Social_Useful_Work__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Тип работы</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Мытье окон</fullName>
            </value>
            <value>
                <fullName>Мытье стен</fullName>
            </value>
            <value>
                <fullName>Мытье пола</fullName>
            </value>
            <value>
                <fullName>Мытье дверей</fullName>
            </value>
            <value>
                <fullName>Мытье мебели</fullName>
            </value>
            <value>
                <fullName>Мытье лестниц</fullName>
            </value>
            <value>
                <fullName>Чистка ковров</fullName>
            </value>
            <value>
                <fullName>Покраска</fullName>
            </value>
            <value>
                <fullName>Погрузка белья</fullName>
            </value>
            <value>
                <fullName>Вынос мусора</fullName>
            </value>
            <value>
                <fullName>Уборка листьев</fullName>
            </value>
            <value>
                <fullName>Подметание двора</fullName>
            </value>
            <value>
                <fullName>Уборка снега</fullName>
            </value>
            <value>
                <fullName>Участие в мероприятии</fullName>
            </value>
            <value>
                <fullName>Помощь воспитателю</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>